Add sheet creation functionality / Simplify game loading